module 3 fix added comments fixed spacing and added character entity

--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,34 @@
 html {
-
     height: 100%;
-
 }
 
 body {
-
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-image: linear-gradient(blue, green);
-
 }
 
-h1{
-
-	text-align: center; 
-
-	color: white;
-
-    font-weight: bold;
-
-    font-size: 32pt;
-
-}
-
-h2{
-
-    text-align: center; 
-
-	color: white;
-
-    font-weight: bold;
-
-    font-size: 20pt;
-
-}
-
-p{
-
+h1 {
     text-align: center;
-
     color: white;
+    font-weight: bold;
+    font-size: 32pt;
+}
 
+h2 {
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 20pt;
+}
+
+h3 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+    color: white;
 }
